--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevArchitect - AI Project Planner</title>
+    <!-- Using Tailwind CDN for simplicity, though PostCSS is recommended for production to remove the console warning -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- React Flow Styles -->
@@ -34,12 +36,13 @@
 {
   "imports": {
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
     "react": "https://esm.sh/react@^19.2.4",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "reactflow": "https://esm.sh/reactflow@^11.11.4",
-    "react-markdown": "https://esm.sh/react-markdown@^10.1.0"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
@@ -47,6 +50,8 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Point to the TypeScript entry file. Vite will bundle this. -->
+    <script type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
