--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,10 +13,10 @@
     "reactflow/": "https://esm.sh/reactflow@^11.11.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "reactflow": "https://esm.sh/reactflow@^11.11.4",
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
   }
 }
 </script>
